@@ -268,8 +268,6 @@ $strConfigImport_xlsx_col_names_name = __('Column names in first row');
 $strConfigInitialSlidersState_name = __('Initial state for sliders');
 $strConfigInsertRows_desc = __('How many rows can be inserted at one time');
 $strConfigInsertRows_name = __('Number of inserted rows');
-$strConfigLeftDisplayLogo_desc = __('Show logo in left frame');
-$strConfigLeftDisplayLogo_name = __('Display logo');
 $strConfigLeftDisplayServers_desc = __('Display server choice at the top of the left frame');
 $strConfigLeftDisplayServers_name = __('Display servers selection');
 $strConfigLeftDisplayDatabaseFilterMinimum_name = __('Minimum number of databases to display the database filter box');
@@ -307,6 +305,8 @@ $strConfigMcryptDisableWarning_desc = __('Disable the default warning that is di
 $strConfigMcryptDisableWarning_name = __('mcrypt warning');
 $strConfigMemoryLimit_desc = __('The number of bytes a script is allowed to allocate, eg. [kbd]32M[/kbd] ([kbd]0[/kbd] for no limit)');
 $strConfigMemoryLimit_name = __('Memory limit');
+$strConfigNavigationDisplayLogo_desc = __('Show logo in left frame');
+$strConfigNavigationDisplayLogo_name = __('Display logo');
 $strConfigNavigationTreeDefaultTabTable_name = __('Target for quick access icon');
 $strConfigNavigationTreeDisplayItemFilterMinimum_desc = __('Defines the minimum number of items (tables, views, routines and events) to display a filter box.');
 $strConfigNavigationTreeDisplayItemFilterMinimum_name = __('Minimum number of items to display the filter box');
