@@ -78,7 +78,7 @@ $forms['Sql_queries']['Sql_box'] = array(
     'SQLQuery/Validate',
     'SQLQuery/Refresh');
 $forms['Left_frame']['Left_frame'] = array(
-    'LeftDisplayLogo',
+    'NavigationDisplayLogo',
     'LeftLogoLink',
     'LeftLogoLinkWindow',
     'NavigationTreePointerEnable',
