@@ -62,6 +62,7 @@ VerboseMultiSubmit, ReplaceHelpImg
 + Renamed configuration directive: LeftPointerEnable => NavigationTreePointerEnable
 + Renamed configuration directive: LeftDefaultTabTable => NavigationTreeDefaultTabTable
 + Renamed configuration directive: LeftDisplayTableFilterMinimum => NavigationTreeDisplayTableFilterMinimum
++ Renamed configuration directive: LeftDisplayLogo => NavigationDisplayLogo
 
 3.5.4.0 (not yet released)
 - bug #3570212 [edit] uuid_short() is a no-arguments function
